--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+# Node
+node_modules/
+package-lock.json
+.vscode/
+.next/
+.env.local
+.DS_Store
+dist/
+
