--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.18.2",
-    "next": "^14.2.33",
-    "next-themes": "^0.2.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "clsx": "2.1.1",
+    "framer-motion": "11.18.2",
+    "next": "14.2.10",
+    "next-themes": "0.2.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.6",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/ui": "^4.0.14",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^16.0.5",
-    "jsdom": "^24.0.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.3",
-    "vitest": "^4.0.14"
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "15.0.6",
+    "@testing-library/user-event": "14.5.2",
+    "@types/node": "20.14.10",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "@vitest/ui": "4.0.14",
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.10",
+    "jsdom": "24.0.0",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.5.3",
+    "vitest": "4.0.14"
   }
 }
